# hdf5-bug

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/example_pkg/: __init__.py  julia.py  juliapkg.json
tests/: test_example.py
