[tool.poetry]
name = "example_pkg"
version = "0.0.1"
description = ""
authors = ["Test Author"]
readme = "README.md"
packages = [{include = "example_pkg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
juliapkg = "^0.1.16"
juliacall = [
    {version = "0.9.24", platform = "darwin"},
    {version = "^0.9.24"}
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
